[tool.poetry]
name = "advent-2024"
version = "0.1.0"
description = ""
authors = ["Riccardo Tesselli <riccardo.tesselli@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.2.0"
matplotlib = "^3.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
